<?xml version="1.0"?>
<package>
  <name>rele_mab</name>
  <version>1.0.0</version>
  <description>The Reinforcement Learning library of Politecnico di Milano, Multi Armed Bandit Extension</description>

  <maintainer email="davide.tateo@polimi.it">Davide Tateo</maintainer>

  <license>GPLv3</license>

  <author email="matteo.pirotta@polimi.it">Matteo Pirotta</author>
  <author email="davide.tateo@polimi.it">Davide Tateo</author>
  <author email="carlo.deramo@polimi.it">Carlo D'Eramo</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rele</build_depend>

</package>
