<?xml version="1.0"?>
<package>
  <name>rele_ros</name>
  <version>1.0.0</version>
  <description>The Reinforcement Learning library of Politecnico di Milano</description>

  <maintainer email="davide.tateo@polimi.it">Davide Tateo</maintainer>

  <license>GPLv3</license>

  <author email="matteo.pirotta@polimi.it">Matteo Pirotta</author>
  <author email="davide.tateo@polimi.it">Davide Tateo</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
