#Test Makefile

add_subdirectory(Batch)
add_subdirectory(BBO)
add_subdirectory(core)
add_subdirectory(hierarchical)
add_subdirectory(IRL)
add_subdirectory(miscellaneous)
add_subdirectory(MultiHeat)
add_subdirectory(PG)
add_subdirectory("policy")
add_subdirectory(Rocky)
add_subdirectory(solvers)
add_subdirectory(TD)
